hopefully fixed android footer clipping issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,11 @@ header {
   color: #faf3e0;
 }
 
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 ul {
   display: flex;
   list-style: none;
@@ -61,11 +66,6 @@ header li {
   text-align: center;
   flex-direction: column; /* makes content stack vertically */
   padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-main.background-container {
-  padding-top: 40px;
   padding-bottom: 60px;
 }
 
@@ -305,8 +305,8 @@ footer {
   }
 
   main {
-    min-height: 600px;
-    max-height: 800px;
+    min-height: auto;
+    max-height: none;
   }
 
   header {
